// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Types 1`] = `
Array [
  <div
    className="sc-bwzfXH jOFtGu"
  >
    <div
      className="sc-bdVaJa kBtvgL"
    >
      Default alert message.
    </div>
  </div>,
  <div
    className="sc-bwzfXH jOFtGu"
  >
    <div
      className="sc-bdVaJa gKPThc"
    >
      Success alert message.
    </div>
  </div>,
  <div
    className="sc-bwzfXH jOFtGu"
  >
    <div
      className="sc-bdVaJa gMIKvc"
    >
      Warning alert message.
    </div>
  </div>,
  <div
    className="sc-bwzfXH jOFtGu"
  >
    <div
      className="sc-bdVaJa iCqLQu"
    >
      Error alert message.
    </div>
  </div>,
]
`;

exports[`Storyshots Button Types 1`] = `
Array [
  <div
    className="sc-bxivhb jssnQU"
  >
    <button
      className="sc-htpNat kPGBzC"
    >
      Default
    </button>
    <button
      className="sc-htpNat dZWAbK"
      disabled={true}
    >
      Default [disabled]
    </button>
    <button
      className="sc-htpNat dZWAbK"
      disabled={true}
    >
      ...
    </button>
  </div>,
  <div
    className="sc-bxivhb jssnQU"
  >
    <button
      className="sc-htpNat cxJwLr"
    >
      Primary
    </button>
    <button
      className="sc-htpNat haJWSe"
      disabled={true}
    >
      Primary [disabled]
    </button>
    <button
      className="sc-htpNat haJWSe"
      disabled={true}
    >
      ...
    </button>
  </div>,
  <div
    className="sc-bxivhb jssnQU"
  >
    <button
      className="sc-htpNat itrgAT"
    >
      Success
    </button>
    <button
      className="sc-htpNat cTKhpM"
      disabled={true}
    >
      Success [disabled]
    </button>
    <button
      className="sc-htpNat cTKhpM"
      disabled={true}
    >
      ...
    </button>
  </div>,
  <div
    className="sc-bxivhb jssnQU"
  >
    <button
      className="sc-htpNat bqZFqS"
    >
      Warning
    </button>
    <button
      className="sc-htpNat eQwoTA"
      disabled={true}
    >
      Warning [disabled]
    </button>
    <button
      className="sc-htpNat eQwoTA"
      disabled={true}
    >
      ...
    </button>
  </div>,
  <div
    className="sc-bxivhb jssnQU"
  >
    <button
      className="sc-htpNat gRYyAa"
    >
      Error
    </button>
    <button
      className="sc-htpNat epyUNY"
      disabled={true}
    >
      Error [disabled]
    </button>
    <button
      className="sc-htpNat epyUNY"
      disabled={true}
    >
      ...
    </button>
  </div>,
]
`;

exports[`Storyshots Form Input Default [number] 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <input
    className="sc-ifAKCX ilibil"
    id="someId"
    placeholder="1"
    type="number"
  />
</div>
`;

exports[`Storyshots Form Input Default [text] 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <input
    className="sc-ifAKCX ilibil"
    id="someId"
    placeholder="Some Placeholder"
  />
</div>
`;

exports[`Storyshots Form Input Disabled 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <input
    className="sc-ifAKCX jPEArt"
    disabled={true}
    id="someId"
    value="Disabled Value"
  />
</div>
`;

exports[`Storyshots Form Input Error 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <input
    className="sc-ifAKCX kltyXz"
    id="someId"
    value="Some Value"
  />
  <span
    className="sc-gzVnrw jjioWn"
  >
    Some Error
  </span>
</div>
`;

exports[`Storyshots Form Input Filled 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <input
    className="sc-ifAKCX ilibil"
    id="someId"
    value="Some Value"
  />
</div>
`;

exports[`Storyshots Form Select Default 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <select
    className="sc-htoDjs eFgptt"
    id="someId"
  >
    <option
      selected={false}
      value={1}
    >
      first option
    </option>
    <option
      selected={false}
      value={2}
    >
      second option
    </option>
    <option
      selected={false}
      value={3}
    >
      third option
    </option>
    <option
      selected={false}
      value={4}
    >
      fourth option
    </option>
    <option
      selected={false}
      value={5}
    >
      fifth option
    </option>
    <option
      selected={false}
      value={6}
    >
      some really long option text
    </option>
  </select>
</div>
`;

exports[`Storyshots Form Select Disabled 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <select
    className="sc-htoDjs ebOHvM"
    disabled={true}
    id="someId"
  >
    <option
      selected={false}
      value={1}
    >
      first option
    </option>
    <option
      selected={false}
      value={2}
    >
      second option
    </option>
    <option
      selected={true}
      value={3}
    >
      third option
    </option>
    <option
      selected={false}
      value={4}
    >
      fourth option
    </option>
    <option
      selected={false}
      value={5}
    >
      fifth option
    </option>
    <option
      selected={false}
      value={6}
    >
      some really long option text
    </option>
  </select>
</div>
`;

exports[`Storyshots Form Select Error 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <select
    className="sc-htoDjs cpyeCP"
    id="someId"
  >
    <option
      selected={false}
      value={1}
    >
      first option
    </option>
    <option
      selected={false}
      value={2}
    >
      second option
    </option>
    <option
      selected={true}
      value={3}
    >
      third option
    </option>
    <option
      selected={false}
      value={4}
    >
      fourth option
    </option>
    <option
      selected={false}
      value={5}
    >
      fifth option
    </option>
    <option
      selected={false}
      value={6}
    >
      some really long option text
    </option>
  </select>
  <span
    className="sc-gzVnrw jjioWn"
  >
    Some Error
  </span>
</div>
`;

exports[`Storyshots Form Select Selected 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <select
    className="sc-htoDjs eFgptt"
    id="someId"
  >
    <option
      selected={false}
      value={1}
    >
      first option
    </option>
    <option
      selected={false}
      value={2}
    >
      second option
    </option>
    <option
      selected={true}
      value={3}
    >
      third option
    </option>
    <option
      selected={false}
      value={4}
    >
      fourth option
    </option>
    <option
      selected={false}
      value={5}
    >
      fifth option
    </option>
    <option
      selected={false}
      value={6}
    >
      some really long option text
    </option>
  </select>
</div>
`;

exports[`Storyshots Form Textarea Default [text] 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <textarea
    className="sc-dnqmqq cTomPa"
    id="someId"
    placeholder="Some Placeholder"
  />
</div>
`;

exports[`Storyshots Form Textarea Disabled 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <textarea
    className="sc-dnqmqq cTegTr"
    disabled={true}
    id="someId"
    value="Disabled Value"
  />
</div>
`;

exports[`Storyshots Form Textarea Error 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <textarea
    className="sc-dnqmqq MuUeG"
    id="someId"
    value="Some Value"
  />
  <span
    className="sc-gzVnrw jjioWn"
  >
    Some Error
  </span>
</div>
`;

exports[`Storyshots Form Textarea Filled 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM hlUKJw"
    for="someId"
  >
    Some Label
  </label>
  <textarea
    className="sc-dnqmqq cTomPa"
    id="someId"
    value="Some Value"
  />
</div>
`;

exports[`Storyshots NavBar Default 1`] = `
<div
  className="sc-jzJRlG brNPlP"
>
  <nav
    className="sc-VigVT duMHGD"
  >
    <div
      className="sc-jTzLTM OkWhj"
    >
      <span
        className="sc-fjdhpX cDeDMP"
        isActive={true}
        isOpen={true}
        onClick={[Function]}
        to="/"
      >
        Home
      </span>
      <span
        className="sc-fjdhpX eaNIaT"
        isActive={false}
        isOpen={true}
        onClick={[Function]}
        to="/counter"
      >
        Counter
      </span>
      <span
        className="sc-fjdhpX eaNIaT"
        isActive={false}
        isOpen={true}
        onClick={[Function]}
        to="/posts"
      >
        Blog
      </span>
    </div>
    <svg
      className="sc-iwsKbI heUUnb"
      height="49.5px"
      onClick={[Function]}
      viewBox="0 0 48 34"
      width="72px"
    >
      <title>
        Mobile Menu
      </title>
      <g
        className="sc-gZMcBi cFxSZp"
      >
        <path
          className="sc-gqjmRU cALnPm"
          d="M20.945,8.75c0,0.69-0.5,1.25-1.117,1.25H3.141c-0.617,0-1.118-0.56-1.118-1.25l0,0
        c0-0.69,0.5-1.25,1.118-1.25h16.688C20.445,7.5,20.945,8.06,20.945,8.75L20.945,8.75z"
        />
        <path
          className="sc-gqjmRU cALnPm"
          d="M20.923,15c0,0.689-0.501,1.25-1.118,1.25H3.118C2.5,16.25,2,15.689,2,15l0,0
        c0-0.689,0.5-1.25,1.118-1.25 h16.687C20.422,13.75,20.923,14.311,20.923,15L20.923,15z"
        />
        <path
          className="sc-gqjmRU cALnPm"
          d="M20.969,21.25c0,0.689-0.5,1.25-1.117,1.25H3.164c-0.617,0-1.118-0.561-1.118-1.25l0,0
        c0-0.689,0.5-1.25,1.118-1.25h16.688C20.469,20,20.969,20.561,20.969,21.25L20.969,21.25z"
        />
      </g>
    </svg>
  </nav>
</div>
`;

exports[`Storyshots Spinner Default 1`] = `
<div
  className="sc-cSHVUG bvReOz"
/>
`;

exports[`Storyshots Typography Anchor 1`] = `
<a
  className="sc-jKJlTe eSnrcV"
  href="#"
>
  Some simple anchor
</a>
`;

exports[`Storyshots Typography Headers 1`] = `
Array [
  <h1
    className="sc-kAzzGY jFVjaV"
  >
    Header
  </h1>,
  <h2
    className="sc-chPdSV gSXNsL"
  >
    Header
  </h2>,
  <h3
    className="sc-kgoBCf fVLydV"
  >
    Header
  </h3>,
  <h4
    className="sc-kGXeez cvyZaj"
  >
    Header
  </h4>,
  <h5
    className="sc-kpOJdX XsrCm"
  >
    Header
  </h5>,
  <h6
    className="sc-dxgOiQ gOSgEW"
  >
    Header
  </h6>,
]
`;

exports[`Storyshots Typography Paragraph 1`] = `
<p
  className="sc-ckVGcZ bpDmnO"
>
  Utinam audiam partiendo in nec, in nec semper tritani expetendis, in qui minim expetenda. Quo agam prompta explicari ut, an eripuit ornatus quaerendum sit, unum convenire assentior nec ei. Has eu zril vocibus, diceret deleniti at eum. Pri iusto ubique reformidans cu, saepe oratio officiis est an. At mei primis mediocrem disputando, recteque electram consulatu ea his. Usu zril conceptam ut. Sit audire legendos persequeris cu.
</p>
`;
